--- a/src/tools/SConscript
+++ b/src/tools/SConscript
@@ -12,3 +12,6 @@ random_effect_meta_analysis = env_copy.Program('random_effect_meta_analysis.cc')
 env.Install('#bin/' + platform + '/tools/',random_effect_meta_analysis)
 scones = env_copy.Program('scones.cc')
 env.Install('#bin/' + platform + '/tools/',scones)
+env_copy.Append(LIBS=['libboost_program_options'])
+scones2 = env_copy.Program('scones2.cc')
+env.Install('#bin/' + platform + '/tools/',scones2)
