--- a/tests/scones2_tests/CMakeLists.txt
+++ b/tests/scones2_tests/CMakeLists.txt
@@ -2,5 +2,4 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 add_executable(runScones2Tests SCones2Test.cc)
 
-target_link_libraries(runScones2Tests gtest gtest_main)
-target_link_libraries(runScones2Tests scones2)
+target_link_libraries(runScones2Tests gtest gtest_main CEasyGWAS)
