--- a/tests/scones2_tests/CMakeLists.txt
+++ b/tests/scones2_tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(runScones2Tests SCones2Test.cc)
+add_executable(runGinTests ginTests.cc)
 
-target_link_libraries(runScones2Tests gtest gtest_main CEasyGWAS)
+target_link_libraries(runGinTests gtest gtest_main CEasyGWAS)
