--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "tests/lib/googletest"]
-	path = tests/lib/googletest
-	url = ssh://git@github.com/google/googletest.git
 [submodule "External/eigen"]
 	path = External/eigen
 	url = ssh://git@github.com/RLovelett/eigen.git
+[submodule "tests/googletest"]
+	path = tests/googletest
+	url = ssh://git@github.com/google/googletest.git
