whole compilation reworked
simplified CMakeLists

compile everything as a static library gin that everyone imports

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,6 @@ cmake_minimum_required(VERSION 3.6)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_CXX_STANDARD 11)
 
-file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/CEasyGWAS/*.cc ${PROJECT_SOURCE_DIR}/src/*.h
-		${PROJECT_SOURCE_DIR}/src/CEasyGWAS/*/*.cc ${PROJECT_SOURCE_DIR}/src/*/*.h
-		${PROJECT_SOURCE_DIR}/src/External/eigen/*.cc ${PROJECT_SOURCE_DIR}/src/External/eigen/*.h)
-
 if (CMAKE_BUILD_TYPE EQUAL "DEBUG")
 	SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g" )
 endif (CMAKE_BUILD_TYPE EQUAL "DEBUG")
@@ -16,6 +12,7 @@ include_directories(${Boost_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/src/
 		${PROJECT_SOURCE_DIR}/External ${PROJECT_SOURCE_DIR}/External/eigen
 		${PROJECT_SOURCE_DIR}/External/maxflow ${PROJECT_SOURCE_DIR}/External/Cephes)
 
+# create gin library
 if (UNIX)
 	if (APPLE)
 		SET( ginlib  "gin-macosx-x64" )
@@ -24,14 +21,16 @@ if (UNIX)
 	endif (APPLE)
 endif (UNIX)
 
-add_library(${ginlib} STATIC ${SOURCES})
-target_link_libraries (${ginlib} cephes maxflow)
+file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/CEasyGWAS/*.cc ${PROJECT_SOURCE_DIR}/src/*.h)
+add_library(${ginlib} STATIC ${SOURCES} $<TARGET_OBJECTS:maxflow> $<TARGET_OBJECTS:cephes>)
 
 add_subdirectory (${PROJECT_SOURCE_DIR}/External/Cephes)
 add_subdirectory (${PROJECT_SOURCE_DIR}/External/maxflow)
-add_subdirectory (${PROJECT_SOURCE_DIR}/tests)
-add_subdirectory (${PROJECT_SOURCE_DIR}/src)
 
 install(TARGETS ${ginlib}
 		RUNTIME DESTINATION bin
 		ARCHIVE DESTINATION lib)
+
+# get tools and tests
+add_subdirectory (${PROJECT_SOURCE_DIR}/tests)
+add_subdirectory (${PROJECT_SOURCE_DIR}/src/tools)
