--- a/tests/function_tests/CMakeLists.txt
+++ b/tests/function_tests/CMakeLists.txt
@@ -2,4 +2,4 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 add_executable(runGinTests ginTests.cc)
 
-target_link_libraries(runGinTests gtest gtest_main CEasyGWAS)
+target_link_libraries(runGinTests gtest gtest_main ${ginlib})
