--- a/test/unit_tests/CMakeLists.txt
+++ b/test/unit_tests/CMakeLists.txt
@@ -2,4 +2,4 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 add_executable(runCChi2Tests CChi2Tests.cc)
 
-target_link_libraries(runCChi2Tests gtest gtest_main ${ginlib})
+target_link_libraries(runCChi2Tests gtest gtest_main libgin)
