--- a/lib/Cephes/CMakeLists.txt
+++ b/lib/Cephes/CMakeLists.txt
@@ -1,5 +1,9 @@
-file(GLOB_RECURSE CEPHES_SOURCES cephes.h double/*.c )
-list(REMOVE_ITEM CEPHES_SOURCES "${PROJECT_SOURCE_DIR}/lib/Cephes/double/setpmsvc.c"
-		"${PROJECT_SOURCE_DIR}/lib/Cephes/double/lmdif.c")
+project (CEPHES C)
 
-add_library(cephes OBJECT ${CEPHES_SOURCES})
+file (GLOB_RECURSE CEPHES_SOURCES double/*.c )
+list (REMOVE_ITEM CEPHES_SOURCES
+		${CEPHES_SOURCE_DIR}/double/setpmsvc.c
+		${CEPHES_SOURCE_DIR}/double/lmdif.c)
+
+add_library (cephes OBJECT ${CEPHES_SOURCES} cephes.h)
+target_include_directories (cephes PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
