--- a/lib/maxflow/CMakeLists.txt
+++ b/lib/maxflow/CMakeLists.txt
@@ -1,1 +1,4 @@
+project(MAXFLOW CXX)
+
 add_library(maxflow OBJECT maxflow.cpp maxflow.h)
+target_include_directories (maxflow INTERFACE ${MAXFLOW_SOURCE_DIR})
