--- a/test/function_tests/CMakeLists.txt
+++ b/test/function_tests/CMakeLists.txt
@@ -1,5 +1,4 @@
-include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+include_directories(${GIN_SOURCE_DIR}/lib/eigen)
 
-add_executable(runGinTests ginTests.cc)
-
-target_link_libraries(runGinTests gtest gtest_main libgin)
+add_executable (runGinTests ginTests.cc)
+target_link_libraries (runGinTests gtest gtest_main gin)
