--- a/test/unit_tests/CMakeLists.txt
+++ b/test/unit_tests/CMakeLists.txt
@@ -1,5 +1,4 @@
-include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+include_directories(${GIN_SOURCE_DIR}/lib/eigen)
 
-add_executable(runCChi2Tests CChi2Tests.cc)
-
-target_link_libraries(runCChi2Tests gtest gtest_main libgin)
+add_executable (runCChi2Tests CChi2Tests.cc)
+target_link_libraries (runCChi2Tests gtest gtest_main gin)
