--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,6 @@
-[submodule "External/eigen"]
-	path = External/eigen
-	url = ssh://git@github.com/RLovelett/eigen.git
-[submodule "tests/googletest"]
-	path = tests/googletest
-	url = ssh://git@github.com/google/googletest.git
 [submodule "lib/googletest"]
 	path = lib/googletest
-	url = git@github.com:google/googletest.git
+	url = https://github.com/google/googletest.git
 [submodule "lib/eigen"]
 	path = lib/eigen
-	url = ssh://git@github.com/RLovelett/eigen.git
+	url = https://github.com/RLovelett/eigen.git
