--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,9 +34,9 @@ target_include_directories (${libgin} INTERFACE ${GIN_SOURCE_DIR}/include ${GIN_
 # installation configuration
 install (TARGETS ${libgin}
 		 ARCHIVE DESTINATION lib INCLUDES DESTINATION include)
-install (DIRECTORY ${GIN_SOURCE_DIR}/include/ DESTINATION include/gin
+install (DIRECTORY ${GIN_SOURCE_DIR}/include/ DESTINATION include
 		 FILES_MATCHING PATTERN "*.h")
-install (DIRECTORY ${GIN_SOURCE_DIR}/lib/Cephes DESTINATION include/gin
+install (DIRECTORY ${GIN_SOURCE_DIR}/lib/Cephes DESTINATION include
 		 FILES_MATCHING PATTERN "*.h")
 
 # define alias for linking purposes (in TESTS)
