travis linux dist trusty

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: cpp
 cache: ccache
 
-os:
-  - linux
-  - osx
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+    - os: osx
 
 cache:
   apt: true
