renamed files to avoid name conflicts

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,13 +3,13 @@ project(TESTS)
 include_directories(${GIN_SOURCE_DIR}/lib/eigen)
 
 # unit tests
-file (GLOB_RECURSE UNIT_TEST_SOURCES unit_tests/*.cc)
+file (GLOB_RECURSE UNIT_TEST_SOURCES unit/*.cc)
 
 add_executable (unit_tests ${UNIT_TEST_SOURCES})
 target_link_libraries (unit_tests LINK_PUBLIC gtest gtest_main gin)
 
 # integration tests
-file (GLOB_RECURSE INTEGRATION_TEST_SOURCES integration_tests/*.cc)
+file (GLOB_RECURSE INTEGRATION_TEST_SOURCES integration/*.cc)
 
 add_executable (integration_tests ${INTEGRATION_TEST_SOURCES})
 target_link_libraries (integration_tests LINK_PUBLIC gtest gtest_main gin)
