--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/google/googletest.git
 [submodule "lib/eigen"]
 	path = lib/eigen
-	url = git@github.com:eigenteam/eigen-git-mirror.git
+	url = https://github.com/eigenteam/eigen-git-mirror.git
